--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,13 @@
 .row {
-    height: 100px;
+    height: 80px;
     padding: 10px;
     padding-top: 5px;
+    padding-bottom: 10px;
+
 }
 h1 {
     padding: 50px;
+    font-size: 50px;
 }
 h3:hover {
     color: blue;    
@@ -20,8 +23,21 @@ h3 {
 body {
     background: blueviolet;
 }
-.start {
+.start-box {
     padding-bottom: 0px;
     text-align: center;
     width: 1140px;
+    height: 50px;
+}
+#start-btn {
+
+}
+#timer {
+    visibility: hidden;
+}
+#question {
+    visibility: hidden;
+}
+#answer-block {
+    visibility: hidden;
 }
