Pushing working draft, no for Loop yet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,8 @@ body {
 }
 #question {
     visibility: hidden;
+    margin-bottom: 15px;
+    padding-top: 5px;
 }
 #answer-block {
     visibility: hidden;
