--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ body {
 #question {
     visibility: hidden;
     margin-bottom: 15px;
+    margin-top: 20px;
     padding-top: 5px;
     font-size: 37px;
     line-height: 110%;
